feat: minimize travel-plans list response
